[package]
name = "waw-demo"
version = "0.1.0"
authors = ["Marcel Gleeson <gleeson.marcel@gmail.com>"]
edition = "2021"
# NOTE: requires nightly toolchain for build-std and atomics support

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
waw = { path = "../waw" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3.80"
features = [
  "AudioContext",
  "AudioWorkletNode",
]
