[package]
name = "waw-demo"
version = "0.1.0"
authors = ["Marcel Gleeson <gleeson.marcel@gmail.com>"]
edition = "2021"
# NOTE: requires nightly toolchain for build-std and atomics support

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
waw = { path = "../waw" }
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"

console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.103"
features = [
  "AudioContext",
  "AudioWorkletNode",
]
