[package]
name = "waw"
version = "0.2.0"
edition = "2021"

# IMPORTANT: This crate requires +atomics and +bulk-memory target features
# along with additional linker flags for shared memory support.
# See README.md for complete .cargo/config.toml configuration.

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
js-sys = "0.3.103"
wasm-bindgen = { version = "0.2.126", default-features = false }
wasm-bindgen-futures = "0.4.76"
web-thread = { git = "https://github.com/mlm-games/wasm-worker", features = [
  "audio-worklet",
] }

[dependencies]
inventory = "0.3.24"

[dependencies.web-sys]
version = "0.3.103"
features = [
  "AudioContext",
  "AudioWorkletNode",
  "AudioWorkletNodeOptions",
  "AudioDestinationNode",
  "AudioWorkletProcessor",
  "AudioWorklet",
  "AudioWorkletGlobalScope",
  "console",
]
